[project]
name = "DiscordBot"
version = "3.0.9"
description = "A simple Discord bot with OpenAI support and server administration tools"
urls.Repository = "https://github.com/ddc/DiscordBot"
urls.Homepage = "https://ddc.github.io/DiscordBot"
license = { text = "MIT" }
readme = "README.md"
authors = [
  { name = "Daniel Costa", email = "daniel@ddcsoftwares.com" },
]
maintainers = [
  { name = "Daniel Costa" },
]
keywords = [
  "python", "python3", "python-3",
  "DiscordBot", "discord-bot", "bot",
  "discord-py", "discord-py-bot", "discord"
]
classifiers = [
  "Topic :: Communications :: Chat",
  "Development Status :: 5 - Production/Stable",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.14",
  "Operating System :: OS Independent",
  "Environment :: No Input/Output (Daemon)",
  "Intended Audience :: Developers",
  "Natural Language :: English",
]
requires-python = ">=3.14"
dependencies = [
  "alembic>=1.18.4",
  "beautifulsoup4>=4.14.3",
  "better-profanity>=0.7.0",
  "ddcdatabases[postgres]>=4.0.0",
  "discord-py>=2.7.1",
  "gTTS>=2.5.4",
  "openai>=2.29.0",
  "PyNaCl>=1.6.2",
  "pythonLogs>=6.0.3",
  "uuid-utils>=0.14.1",
]

[dependency-groups]
dev = [
    "coverage>=7.13.5",
    "poethepoet>=0.42.1",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.15.7",
    "testcontainers[postgres]>=4.14.2",
]

[tool.poe.tasks]
linter.shell = "uv run ruff check --fix . && uv run ruff format ."
snyk-export.shell = "rm -f requirements.txt && uv export --no-hashes --no-annotate --format requirements-txt > requirements.txt && uvx pre-commit run --all-files || uvx pre-commit run --all-files"
snyk.shell = "uv pip install pip && snyk test --file=requirements.txt && snyk code test; uv pip uninstall pip"
snyk-container.shell = "docker build -t discordbot:snyk-scan . && snyk container test discordbot:snyk-scan --file=Dockerfile; docker rmi discordbot:snyk-scan"
profile = "uv run python -m cProfile -o cprofile_unit.prof -m pytest tests/unit"
profile-integration = "uv run python -m cProfile -o cprofile_integration.prof -m pytest tests/integration"
test.sequence = [{ shell = "uv run coverage run -m pytest tests/unit" }, { shell = "uv run coverage report" }, { shell = "uv run coverage xml" }]
test-integration = "uv run pytest tests/integration"
hadolint.shell = "docker run --rm -i -v $(pwd)/.hadolint.yml:/.config/hadolint.yml:ro hadolint/hadolint < Dockerfile"
test-docker = "uv run pytest tests/docker"
tests.sequence = ["linter", "hadolint", "test-docker", "test", "test-integration"]
updatedev.sequence = ["linter", {shell = "uv lock --upgrade && uv sync --all-extras --group dev"}]
migration = "uv run --frozen alembic upgrade head"

[tool.pytest.ini_options]
addopts = "-v --import-mode=importlib --junitxml=junit.xml"
junit_family = "legacy"
asyncio_mode = "strict"
asyncio_default_fixture_loop_scope = "function"
markers = [
  "integration: marks tests as integration tests",
  "docker: Docker and compose file tests",
  "gw2_api: marks tests that require GW2 API access",
]
[tool.coverage.run]
omit = [
  "tests/*",
  "*/__init__.py",
]

[tool.coverage.report]
show_missing = true
skip_covered = false
exclude_lines = [
  "pragma: no cover",
  "def __repr__",
  "if self.debug:",
  "if settings.DEBUG",
  "raise AssertionError",
  "raise NotImplementedError",
  "if 0:",
  "if __name__ == .__main__.:",
  "class .*\\bProtocol\\):",
  "@(abc\\.)?abstractmethod",
]

[tool.ruff]
line-length = 120
target-version = "py314"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "C4", "UP", "S", "SLF"]
ignore = ["E501", "E402", "UP046", "UP047"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"tests/**/*.py" = ["S101", "S105", "S106", "S110", "S311", "S603", "S607", "SLF001", "F841"]

[tool.ruff.lint.isort]
known-first-party = ["DiscordBot"]
no-lines-before = ["future", "standard-library", "third-party", "first-party", "local-folder"]
no-sections = true
